--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         </nav>
         <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
         </header>
     <main>
         <!-- Герой -->
     <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button"><a href="">Заказать услугу</a></button>
+        <button type="button">Заказать услугу</button>
     </section>
     <!--преимущества-->
     <section>
@@ -102,7 +102,7 @@
         <ul>
             <li><address>г. Киев, пр-т Леси Украинки, 26</address></li>
             <li><a href="mailto:info@example.com">info@example.com</a></li>
-            <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </footer>
 </html>
