--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +9,7 @@
 <!-- Шапка сайта -->
         <header>
          <nav>
-        <a href="">webstudio</a>
+        <a href="" lang="en">webstudio</a>
         <ul>
                 <li><a href="">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
@@ -17,14 +17,14 @@
         </ul>
         </nav>
         <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
         </header>
     <main>
         <!-- Герой -->
     <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
+        <h1>Эффективные решения <br> для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
     </section>
     <!--преимущества-->
@@ -76,33 +76,35 @@
             <li>
                <img src="/images/igor.jpg" alt="igor" width="270"> 
                <h2>Игорь Демьяненко</h2>
-               <p>Product Designer</p>
+               <p lang="en">Product Designer</p>
             </li>
             <li>
                 <img src="/images/olga.jpg" alt="olga" width="270">
                 <h2>Ольга Репина</h2>
-                <p>Frontend Developer</p>
+                <p lang="en">Frontend Developer</p>
             </li>
             <li>
                 <img src="/images/koly.jpg" alt="koly" width="270">
                 <h2>Николай Тарасов</h2>
-                <p>Marketing</p>
+                <p lang="en">Marketing</p>
             </li>
             <li>
                 <img src="/images/misha.jpg" alt="misha" width="270">
                 <h2>Михаил Ермаков</h2>
-                <p>UI Designer</p>
+                <p lang="en">UI Designer</p>
             </li>
         </ul>
     </section>
     </main>
     <!--Футер-->
     <footer>
-        <a href="">webstudio</a>
+        <a href="" lang="en">webstudio</a>
+        <address>
         <ul>
-            <li><address>г. Киев, пр-т Леси Украинки, 26</address></li>
-            <li><a href="mailto:info@example.com">info@example.com</a></li>
+            <li><a href=""> г. Киев, пр-т Леси Украинки, 26 </a></li>
+            <li><a href="mailto:info@example.com" lang="en">info@example.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
+        </address>
     </footer>
 </html>
