--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
             <li>
-                <a href=""><img src="/images/hand-keyboard.jpg" alt="hand-keyboard" 
+                <a href=""><img src="./images/hand-keyboard.jpg" alt="hand-keyboard" 
                 width="370"></a>
             </li>
             <li>
-                <a href=""><img src="/images/hand-telephone.jpg" alt="hand-telephone" width="370"></a>
+                <a href=""><img src="./images/hand-telephone.jpg" alt="hand-telephone" width="370"></a>
             </li>
             <li>
-                <a href=""><img src="/images/hand-tab.jpg" alt="hand-tab" width="370"></a>
+                <a href=""><img src="./images/hand-tab.jpg" alt="hand-tab" width="370"></a>
             </li>
         </ul>
     </section>
@@ -74,22 +74,22 @@
         <h2>Наша команда</h2>
         <ul>
             <li>
-               <img src="/images/igor.jpg" alt="igor" width="270"> 
+               <img src="./images/igor.jpg" alt="igor" width="270"> 
                <h2>Игорь Демьяненко</h2>
                <p lang="en">Product Designer</p>
             </li>
             <li>
-                <img src="/images/olga.jpg" alt="olga" width="270">
+                <img src="./images/olga.jpg" alt="olga" width="270">
                 <h2>Ольга Репина</h2>
                 <p lang="en">Frontend Developer</p>
             </li>
             <li>
-                <img src="/images/koly.jpg" alt="koly" width="270">
+                <img src="./images/koly.jpg" alt="koly" width="270">
                 <h2>Николай Тарасов</h2>
                 <p lang="en">Marketing</p>
             </li>
             <li>
-                <img src="/images/misha.jpg" alt="misha" width="270">
+                <img src="./images/misha.jpg" alt="misha" width="270">
                 <h2>Михаил Ермаков</h2>
                 <p lang="en">UI Designer</p>
             </li>
